log/build_2025-07-10_12-44-39/cpp_package/stderr.log
CMake Warning (dev) at /usr/lib/aarch64-linux-gnu/cmake/pcl/Modules/FindFLANN.cmake:45 (find_package):
  Policy CMP0144 is not set: find_package uses upper-case <PACKAGENAME>_ROOT
  variables.  Run "cmake --help-policy CMP0144" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  CMake variable FLANN_ROOT is set to:

    /usr

  For compatibility, find_package is ignoring the variable, but code in a
  .cmake module might still use it.
Call Stack (most recent call first):
  /usr/lib/aarch64-linux-gnu/cmake/pcl/PCLConfig.cmake:261 (find_package)
  /usr/lib/aarch64-linux-gnu/cmake/pcl/PCLConfig.cmake:306 (find_flann)
  /usr/lib/aarch64-linux-gnu/cmake/pcl/PCLConfig.cmake:570 (find_external_library)
  /opt/ros/jazzy/share/pcl_conversions/cmake/ament_cmake_export_dependencies-extras.cmake:21 (find_package)
  /opt/ros/jazzy/share/pcl_conversions/cmake/pcl_conversionsConfig.cmake:41 (include)
  /opt/ros/jazzy/share/pcl_ros/cmake/ament_cmake_export_dependencies-extras.cmake:21 (find_package)
  /opt/ros/jazzy/share/pcl_ros/cmake/pcl_rosConfig.cmake:41 (include)
  CMakeLists.txt:31 (find_package)
This warning is for project developers.  Use -Wno-dev to suppress it.

CMake Warning (dev) at CMakeLists.txt:33 (find_package):
  Policy CMP0074 is not set: find_package uses <PackageName>_ROOT variables.
  Run "cmake --help-policy CMP0074" for policy details.  Use the cmake_policy
  command to set the policy and suppress this warning.

  CMake variable PCL_ROOT is set to:

    /usr

  For compatibility, CMake is ignoring the variable.
This warning is for project developers.  Use -Wno-dev to suppress it.

/home/p/ros2_ws/src/cpp_package/src/stable_ground_fitter_node.cpp: In member function ‘void StableGroundFitterNode::cloud_callback(sensor_msgs::msg::PointCloud2_<std::allocator<void> >::SharedPtr)’:
/home/p/ros2_ws/src/cpp_package/src/stable_ground_fitter_node.cpp:276:38: error: ‘header’ was not declared in this scope
  276 |                 coeffs_msg->header = header;
      |                                      ^~~~~~
/home/p/ros2_ws/src/cpp_package/src/stable_ground_fitter_node.cpp:277:41: error: ‘coeffs’ was not declared in this scope
  277 |                 for(const auto& value : coeffs.values)
      |                                         ^~~~~~
gmake[2]: *** [CMakeFiles/stable_ground_fitter_node.dir/build.make:76: CMakeFiles/stable_ground_fitter_node.dir/src/stable_ground_fitter_node.cpp.o] 오류 1
gmake[1]: *** [CMakeFiles/Makefile2:1177: CMakeFiles/stable_ground_fitter_node.dir/all] 오류 2
gmake[1]: *** 끝나지 않은 작업을 기다리고 있습니다....
gmake: *** [Makefile:146: all] 오류 2
